--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "axios": "^1.8.4",
     "expo": "~52.0.43",
     "expo-asset": "^11.0.5",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "multer": "^1.4.5-lts.2",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-calendars": "^1.1311.1",
@@ -31,8 +33,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-redux": "^9.2.0",
-    "expo-image-picker": "~16.0.6"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
