--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^4.1.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
-    "expo": "~52.0.43",
+    "expo": "^53.0.5",
     "expo-asset": "^11.0.5",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-secure-store": "~14.0.1",
-    "expo-status-bar": "~2.0.1",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-secure-store": "~14.2.3",
+    "expo-status-bar": "~2.2.3",
     "multer": "^1.4.5-lts.2",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-calendars": "^1.1311.1",
     "react-native-date-picker": "^5.0.12",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
