--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
-    "expo": "^53.0.5",
-    "expo-asset": "^11.0.5",
+    "expo": "53.0.9",
+    "expo-asset": "~11.1.5",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-notifications": "^0.31.2",
