--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,7 @@
       "developmentClient": true,
       "distribution": "internal",
       "env": {
-        "GOOGLE_SERVICES_JSON": "./google-services.json"
+        "GOOGLE_SERVICES_JSON_B64": "USE_EAS_SECRET"
       }
     },
     "preview": {
